<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="80dp"
    android:paddingRight="80dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="240dp"
        android:layout_height="112dp"
        android:fontFamily="@font/oswald"
        android:text="@string/app_title"
        android:textColor="#FFFFFF"
        android:textSize="80sp" />

    <TextView
        android:layout_width="240dp"
        android:layout_height="42dp"
        android:layout_marginBottom="130sp"
        android:fontFamily="@font/oswald_light"
        android:gravity="right"
        android:text="@string/app_subtitle"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:text="@string/login_button_confirm"
        android:textColor="@color/textColorPink"
        android:fontFamily="@font/catamaran"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_main_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:text="@string/register_button_confirm"
        android:textColor="@color/textColorPink"
        android:fontFamily="@font/catamaran"
        android:textSize="25sp" />
</LinearLayout>